--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
                         <div class="member-name">Desy</div>
                     </div>
                     <div class="member-card" onclick="highlightMember(this)">
-                        <div class="member-name">Erapati</div>
+                        <div class="member-name">Ika</div>
                     </div>
                     <div class="member-card" onclick="highlightMember(this)">
                         <div class="member-name">Erapani</div>
                     </div>
                     <div class="member-card" onclick="highlightMember(this)">
-                        <div class="member-name">Nadia</div>
+                        <div class="member-name">Nadiya</div>
                     </div>
                     <div class="member-card" onclick="highlightMember(this)">
                         <div class="member-name">Teguh</div>
