--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dampak Limbah Komputer TJKT 1 - Kelompok 1</title>
+    <title>Dampak Limbah Komputer. X TJKT 1 - Kelompok 1</title>
     <style>
         * {
             margin: 0;
@@ -376,7 +376,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>TJKT 1 - Kelompok 1</h1>
+            <h1>X TJKT 1 - Kelompok 1</h1>
             <p class="subtitle">Dampak Limbah Komputer Terhadap Lingkungan</p>
             
             <div class="members-section">
@@ -515,7 +515,7 @@
         <div class="container">
             <div class="footer-content">
                 <div>
-                    <p>&copy; 2025 TJKT 1 Kelompok 1 - Dampak Limbah Komputer Terhadap Lingkungan</p>
+                    <p>&copy; 2025 X TJKT 1 Kelompok 1 - Dampak Limbah Komputer Terhadap Lingkungan</p>
                 </div>
                 <div class="footer-links">
                     <a href="#" onclick="scrollToTop()">Kembali ke Atas</a>
